ktomgirl (0.0.13-1) unstable; urgency=low

  * Build on newer versions of gcc such as 4.8 and newer cmake like 2.8.11.

 -- Frederick Ollinger <follinge@gmail.com>  Mon, 17 Mar 2014 11:56:28 -0700

ktomgirl (0.0.12-1) unstable; urgency=low

  * Fix bug where we lose data.

 -- Frederick Ollinger <follinge@gmail.com>  Sat, 16 Dec 2013 16:17:46 -0700

ktomgirl (0.0.11-0) unstable; urgency=low

  * Seach now works

 -- Frederick Ollinger <follinge@gmail.com>  Sat, 14 Dec 2013 15:17:46 -0700

ktomgirl (0.0.10-1) unstable; urgency=low

  * Give names to untitled notes

 -- Frederick Ollinger <follinge@gmail.com>  Sat, 07 Dec 2013 11:17:46 -0700

ktomgirl (0.0.9-1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- Frederick Ollinger <follinge@gmail.com>  Sat, 02 Nov 2013 20:19:46 -0700